--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@
           <button class="btn btnbr ms-md-5 mb-5 mt-3">Browse Everything</button>
         </div>
         <div class="col-md-6 ">
-          <img src="img/design-resources-premium-image.png" alt="">
+          <img src="img/design-resources-premium-image.png" alt="" class="col-md-12 col-12">
         </div>
       </div>
     </div>
